2003-03-07  Mark McLoughlin  <mark@skynet.ie>

	* cdplayer.c: (help_cb), (phelp_cb): update for screen-exec changes.

2003-03-02  Takeshi AIHANA <aihana@gnome.gr.jp>

	* docs/ja/*.xml, docs/ja/figures/*.png, docs/ja/Makefile.am:
	Added new documents for GNOME 2.2 translated by
	KAMAGASAKO Masatoshi <emerald@gnome.gr.jp>.

2003-01-23  Breda McColgan <Breda.McColgan@sun.com>

        * docs/C/cdplayer.xml: updated for GNOME 2.2
        * docs/C/cdplayer-C.omf: updated manual date
          and version number
        * docs/C/figures/cdplayer_applet.png: updated for GNOME 2.2
        * docs/C/figures/cdplayer_applet_eject.png: updated for GNOME 2.2
        * docs/C/figures/cdplayer_applet_nexttrack.png: updated for GNOME 2.2
        * docs/C/figures/cdplayer_applet_pause.png: added for GNOME 2.2
        * docs/C/figures/cdplayer_applet_play.png: added for GNOME 2.2
        * docs/C/figures/cdplayer_applet_playafterpause.png: added for GNOME 2.2
        * docs/C/figures/cdplayer_applet_playing.png: updated for GNOME 2.2
        * docs/C/figures/cdplayer_applet_prevtrack.png: updated for GNOME 2.2
        * docs/C/figures/cdplayer_applet_stop.png: updated for GNOME 2.2

2003-01-21  Arvind Samptur <arvind.samptur@wipro.com>
	* cdplayer.[ch] (preferences_cb) (response_cb) (cdplayer_destroy):
	Destroy the preferences dialog when the applet is destroyed.

2003-01-11  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>

	* cdplayer.c (activate_cb): Stop playing if the user changes the
	device when the applet is playing

2002-12-15  Kevin Vandersloot <kfv101@psu.edu>

	* cdplayer.c: change packing so as to not try to expand panels. Fixes
	bugs #83282. Change packing on vertical panels. Fixes bug 
	#67596

2002-12-14  Fernando Herrera <fherrera@onirica.com>

	* GNOME_CDPlayerApplet.server.in.in: added bugzilla attributtes

2002-12-08  Kevin Vandersloot <kfv101@psu.edu>

	* cdplayer.c: fix segfault on exit when we don't need to stop the cd.
