@@ -14,7 +14,8 @@ enum {
 	DISC_IO_ERROR,
 	DISC_INDEX_OUT_OF_RANGE,
 	DISC_TRAY_OPEN,
-	DISC_DRIVE_NOT_READY
+	DISC_DRIVE_NOT_READY,
+	DISC_DEVICE_BUSY
 };
 
 enum {
