@@ -1,3 +1,9 @@
+2003-03-20  Balamurali Viswanathan <balamurali.viswanathan@wipro.com>
+
+        * cdplayer.c, cdrom-solaris.c, writer-solaris.[ch]
+          Give a error dialog if the Audio device is busy.
+          Solves bug #105296
+
 2003-03-07  Mark McLoughlin  <mark@skynet.ie>
 
 	* cdplayer.c: (help_cb), (phelp_cb): update for screen-exec changes.
